testing/tests/ui/json-too-many-args.stderr
error: unexpected argument(s) in `json` filter
 --> OneTwoThree.txt:1:3
       "1|json(2, 3) }}"
 --> tests/ui/json-too-many-args.rs:5:10
  |
5 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
